--- a/randnn/randnn_local.html
+++ b/randnn/randnn_local.html
@@ -10,7 +10,7 @@
           ['AMSarray',null,true,true,'rcl','0em .4em']; 
       }); 
 	</script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+    <script src='/Users/tylerneylon/work/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
     <link rel="stylesheet" href="tufte-edited.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -154,8 +154,30 @@
       <p>On the other hand, the bottom-right image is also less than ideal because it presents a relatively smooth, low-detail surface which is likely to make training slower than it could be given stronger network gradients.</p>
       <p><em>(The next paragraph is slightly mathy and can be skipped if you’re not here for proofs.)</em></p>
       <p>There is a way to see why a zoomed-out random network has a radial pattern. As obverved above, relu-based networks are truly piecewise linear, and in fact tanh()-based networks (like those in figure 18) are very close to piecewise linear in the sense that tanh() can be closely approximated with a very small number of linear pieces (this is also due to an observation by Ian Goodfellow). From this perspective, the domain of each individual layer can be partitioned into <a href="https://en.wikipedia.org/wiki/Convex_set"><em>convex</em></a> regions on which the layer, as a function, is linear. The composition (that is, the application of layer after layer) of these functions maintains this property: the domain of multiple layers can still be partitioned into <em>convex</em> regions of linearity. Moreover, there are only ever finitely-many such regions. So the overall network domain, as a partition of linear-behavior regions, has finitely many convex pieces. Thus the pieces that are unbounded must necessarily form a star-like, or radial pattern similar to that in the top-left image of figure 18.</p>
+      <h1 id="scale-of-random-weights"><span class="header-section-number">7</span> Scale of Random Weights</h1>
+      <p>The last hyperparameter I’ll visualize is the scale of the random weights. There are different methods of choosing random weights, such as using a Gaussian distribution or a uniform distribution. For simplicity, all the networks in this past use uniformly random weights, although in practice normals are also great.</p>
+      <p>The table of images below shows random networks with increasing random weight scales from left-to-right, top-to-bottom. All the other hyperparameters (such as number of layers or layer size) are held constant. Each network has 27 layers and 30 neurons each. The top-left network has random weights in the range [-0.5, 0.5]; the bottom-right uses the range [-1, 1].</p>
+      <div class="figure">
+      <p class="caption">Figure 19: Each image shows essentially the same network, except that the scale of the random weights increases geometrically from the range [-0.5, 0.5] at the top-left to [-1.0, 1.0] at the bottom-right.</p>
+      <img src="images/fig19@2x.png" alt="Figure 19: Each image shows essentially the same network, except that the scale of the random weights increases geometrically from the range [-0.5, 0.5] at the top-left to [-1.0, 1.0] at the bottom-right." id="fig:fig19" />
+      </div>
+      <p>Although the high-weight-scale images in the lower row may <em>look</em> interesting, they’re not ideal for training because they are starting from an assumption of a very complex behavior of the data. Any actual patterns in the data are likely to be far from this rather specific and arbitrary starting point.</p>
+      <p>Below is an animation of the same network evolution shown in the image grid above. The animation provides a stronger sense of the infusion of detail as the weights scale up from the range <span class="math inline">\([-0.4, 0.4]\)</span> at the start of the animation to <span class="math inline">\([-0.8, 0.8]\)</span> at the end.</p>
+      <div class="figure">
+      <p class="caption">Figure 20: The network from figure 19 with weights gradually scaled up from the range [-0.4, 0.4] to the range [-0.8, 0.8].</p>
+      <img src="images/weight_scale.gif" alt="Figure 20: The network from figure 19 with weights gradually scaled up from the range [-0.4, 0.4] to the range [-0.8, 0.8]." id="fig:fig20" />
+      </div>
+      <p>There are useful initialization methods such as He or Glorot (aka Xavier) initialization that make it easier to find the sweet spot on this spectrum. XXX add paper references These methods use expressions like <span class="math inline">\(1/\sqrt{n},\)</span> where <span class="math inline">\(n\)</span> is the number of inputs to a layer. I’ll provide a quick bit of intuition behind why that particular expression is a useful barometer for the scale of your random weights.</p>
+      <p>I’ll provide a quick mathematical look at a single layer without a bias term or an activation function. Because of these simplifications, actual network behavior is more complex, but this brief line of thinking will show you the kind of thought behind choosing a good initialization scale. Our simplified layer is a straightforward matrix multiplication:</p>
+      <p><span class="math display">\[y = Wx.\]</span></p>
+      <p>Suppose each term <span class="math inline">\(w_{ij}\)</span> in matrix <span class="math inline">\(W\)</span> is chosen independently with mean 0 and standard deviation <span class="math inline">\(\sigma.\)</span> Since we are thinking in terms of many layers, one of the key dangers is that the outputs of the later layers may either explode (have values approaching <span class="math inline">\(\infty\)</span>), or vanish (have values approaching 0). Mathematically, we can fight back by encouraging the output of a layer to have a similar scale to its input. In other words, we would like to encourage something like this:</p>
+      <p><span class="math display">\[||y|| \approx ||x||.\]</span></p>
       <hr />
-      <h1 id="references"><span class="header-section-number">7</span> References</h1>
+      <p><span class="math display">\[E[||y||^2] = \sum_i E[y_i^2] = \sum_i \text{Var}[y_i]\]</span></p>
+      <p><span class="math display">\[ = \sum_{i,j} \text{Var}[w_{ij}x_j] = \sum_{i,j} x_j^2\text{Var}[w_{ij}] \]</span></p>
+      <p><span class="math display">\[ = \sum_{i,j} x_j^2\sigma^2 = n\sigma^2||x||.\]</span></p>
+      <hr />
+      <h1 id="references"><span class="header-section-number">8</span> References</h1>
     </div>
   </body>
 </html>
