--- a/randnn/randnn_local.html
+++ b/randnn/randnn_local.html
@@ -172,14 +172,14 @@
       <p>I’ll provide a quick mathematical look at a single layer without a bias term or an activation function. Because of these simplifications, actual network behavior is more complex, but this brief line of thinking will show you the kind of thought behind choosing a good initialization scale. Our simplified layer is a straightforward matrix multiplication:</p>
       <p><span class="math display">\[y = Wx.\]</span></p>
       <p>Suppose each term <span class="math inline">\(w_{ij}\)</span> in matrix <span class="math inline">\(W\)</span> is chosen independently with mean 0 and standard deviation <span class="math inline">\(\sigma.\)</span> Since we are thinking in terms of many layers, one of the key dangers is that the outputs of subsequent layers may either explode (each layer’s output is significantly larger than the previous output), or vanish (each layer’s output is significantly smaller than the previous). Mathematically, we can fight back by encouraging the output of a layer to have a similar scale to its input. In other words, we would like to encourage something like this:</p>
-      <p><span id="eq:eq3"><span class="math display">\[||y|| \approx ||x||.\qquad(3)\]</span></span></p>
-      <p>If you’re familiar with expected values and variances, then we can use those ideas to calculate the expected value of <span class="math inline">\(||y||^2\)</span> relative to the value of <span class="math inline">\(||x||^2.\)</span> In the following equations, I’ll write <span class="math inline">\(w_i\)</span> for the <span class="math inline">\(i^\text{th}\)</span> row of matrix <span class="math inline">\(W:\)</span></p>
-      <p><span class="math display">\[E[||y||^2] = \sum_i E[y_i^2] = \sum_i \text{Var}[y_i]\]</span></p>
+      <p><span id="eq:eq3"><span class="math display">\[\|y\| \approx \|x\|.\qquad(3)\]</span></span></p>
+      <p>If you’re familiar with expected values and variances, then we can use those ideas to calculate the expected value of <span class="math inline">\(\|y\|^2\)</span> relative to the value of <span class="math inline">\(\|x\|^2:\)</span></p>
+      <p><span class="math display">\[E[\|y\|^2] = \sum_i E\left[y_i^2\right] = \sum_i \text{Var}[y_i]\]</span></p>
       <p><span class="math display">\[ = \sum_{i,j} \text{Var}[w_{ij}x_j] = \sum_{i,j} x_j^2\text{Var}[w_{ij}] \]</span></p>
-      <p><span class="math display">\[ = \sum_{i,j} x_j^2\sigma^2 = n\sigma^2||x||^2.\]</span></p>
-      <p>In other words, <span class="math inline">\(E[||y||^2] = n\sigma^2 ||x||^2.\)</span>$ Since we can choose the standard deviation of our weights <span class="math inline">\(\sigma,\)</span> we can set</p>
+      <p><span class="math display">\[ = \sum_{i,j} x_j^2\sigma^2 = n\sigma^2\|x\|^2.\]</span></p>
+      <p>In other words, <span class="math inline">\(E[\|y\|^2] = n\sigma^2 \|x\|^2.\)</span> Since we can choose the standard deviation of our weights <span class="math inline">\(\sigma,\)</span> we can set</p>
       <p><span class="math display">\[\sigma = \frac{1}{\sqrt{n}},\]</span></p>
-      <p>and we’ll arrive at <span class="math inline">\(E[||y||^2] = ||x||^2,\)</span> which nicely matches our original goal (3). This is not the exact reasoning used to justify He or Glorot initialization, but it does provide a first look at how the weight scales affect the global behavior of the network as a whole.</p>
+      <p>and we’ll arrive at <span class="math inline">\(E[\|y\|^2] = \|x\|^2,\)</span> which nicely matches our original goal (3). This is not the exact reasoning used to justify He or Glorot initialization, but it does provide a first look at how the weight scales affect the global behavior of the network as a whole.</p>
       <h1 id="notes"><span class="header-section-number">8</span> Notes</h1>
       <hr />
       <h1 id="references" class="unnumbered">References</h1>
