--- a/randnn/randnn_local.html
+++ b/randnn/randnn_local.html
@@ -115,12 +115,12 @@
       <p>Here’s a close-up of the above network extended to 27 layers:</p>
       <div class="figure">
       <p class="caption">Figure 11: The network from figure 10 with 27 layers.</p>
-      <img src="images/27layers@2x.png" alt="Figure 11: The network from figure 10 with 27 layers." id="fig:fig11" />
+      <img src="images/fig11@2x.png" alt="Figure 11: The network from figure 10 with 27 layers." id="fig:fig11" />
       </div>
       <p>In terms of human-appreciable beauty, these graphs become fairly complex as we keep adding more layers. Here’s a glimpse of the same network extended to 40 layers:</p>
       <div class="figure">
       <p class="caption">Figure 12: The network from figure 10 extended to 40 layers.</p>
-      <img src="images/40layers@2x.png" alt="Figure 12: The network from figure 10 extended to 40 layers." id="fig:fig12" />
+      <img src="images/fig12@2x.png" alt="Figure 12: The network from figure 10 extended to 40 layers." id="fig:fig12" />
       </div>
       <h1 id="activation-functions"><span class="header-section-number">4</span> Activation Functions</h1>
       <p>So far we’ve looked at two sigmoidal activation functions: <span class="math inline">\(\sigma()\)</span> and <span class="math inline">\(\tanh().\)</span> Another popular choice is <span class="math inline">\(\text{relu}(x) = \max(x, 0).\)</span></p>
