randnn: Update figure 14 image quality.

--- a/randnn/randnn_gif.html
+++ b/randnn/randnn_gif.html
@@ -122,7 +122,7 @@
       <p>Let’s take a look at relu-based networks of varying depths. For comparison, the top row here is a <span class="math inline">\(\tanh()-\)</span>based network, similar to the networks above. The bottom row uses the <span class="math inline">\(\text{relu}()\)</span> activation function. Both networks use <span class="math inline">\(\sigma()\)</span> on their final layer in order to constrain the output values to the [0, 1] range.</p>
       <div class="figure">
       <p class="caption">Figure 14: Each row depicts a neural network at increasing depths. From left to right, each image has 5 more layers than the previous one. The top row uses tanh() activation functions; the bottom uses relu().</p>
-      <img src="images/tanh_vs_relu@2x.png" alt="Figure 14: Each row depicts a neural network at increasing depths. From left to right, each image has 5 more layers than the previous one. The top row uses tanh() activation functions; the bottom uses relu()." id="fig:fig14" />
+      <img src="images/fig14@2x.png" alt="Figure 14: Each row depicts a neural network at increasing depths. From left to right, each image has 5 more layers than the previous one. The top row uses tanh() activation functions; the bottom uses relu()." id="fig:fig14" />
       </div>
       <h1 id="neurons-per-layer"><span class="header-section-number">5</span> Neurons Per Layer</h1>
       <p>In a layer like this:</p>
@@ -183,7 +183,6 @@
       <h1 id="notes"><span class="header-section-number">8</span> Notes</h1>
       <p>XXX</p>
       <ul>
-      <li>About the shadertoy renderer.</li>
       <li>Link to the notebook to generate the images.</li>
       <li>How figure 2 was generated.</li>
       </ul>
