randnn: Some work on notes section.

--- a/randnn/randnn_gif.html
+++ b/randnn/randnn_gif.html
@@ -187,8 +187,7 @@
       <h2 id="figure-1"><span class="header-section-number">8.1</span> Figure 1</h2>
       <p>Figure 1 is a screenshot of a WebGL-renderable random neural network with live-editable code <a href="https://www.shadertoy.com/view/MtdBz4">on Shadertoy</a>.</p>
       <h2 id="figure-2"><span class="header-section-number">8.2</span> Figure 2</h2>
-      <p>There are two versions of figure 2 because I don’t think all browsers correctly display the live-rendered version, which uses WebGL via Shadertoy. You can experiment with the live-rendered version in real-time <a href="https://www.shadertoy.com/view/XltBR4">on Shadertoy</a>. The animated gif uses different parameters that can find</p>
-      <p>The live-animated version of figure 2 can be</p>
+      <p>There are two versions of figure 2 because I don’t think all browsers correctly display the live-rendered version, which uses WebGL via Shadertoy. You can experiment with the live-rendered version in real-time <a href="https://www.shadertoy.com/view/XltBR4">at this Shadertoy page</a>. The animated gif uses different parameters that you can find <a href="https://www.shadertoy.com/view/lldBz4">at this other Shadertoy page</a>.</p>
       <p>XXX</p>
       <ul>
       <li>Link to the notebook to generate the images.</li>
