randnn: Finish v1 draft of image notes section.

--- a/randnn/randnn_gif.html
+++ b/randnn/randnn_gif.html
@@ -182,17 +182,14 @@
       <p>and we’ll arrive at <span class="math inline">\(E[\|y\|^2] = \|x\|^2,\)</span> which nicely matches our original goal (3). This is not the exact reasoning used to justify He or Glorot initialization, but it does provide a first look at how the weight scales affect the global behavior of the network as a whole.</p>
       <hr />
       <h1 id="notes-on-the-images"><span class="header-section-number">8</span> Notes on the Images</h1>
-      <p>This section describes how to recreate all of the images in this post. If you like these images, I encourage you to render and play with them for yourself because they’re surprisingly delightful. As I experimented, I felt as if I was exploring a new world.</p>
-      <p>The images in this post were created either programmatically or with the Grapher app on macOS. The code-based images were created in either <a href="https://www.shadertoy.com/">Shadertoy</a> or via Python with numpy as the rendering system and Pillow as the png encoder.</p>
-      <h2 id="figure-1"><span class="header-section-number">8.1</span> Figure 1</h2>
+      <p>This section describes how to recreate all of the images in this post. If you like these images, I encourage you to render and play with them for yourself — they’re surprisingly delightful. As I experimented, I felt as if I was exploring a new world.</p>
+      <h2 id="figures-created-with-python"><span class="header-section-number">8.1</span> Figures Created with Python</h2>
+      <p>All of the neural network images after figure 2, excluding the heightmaps, were created in <a href="https://github.com/tylerneylon/math/blob/master/randnn/notebook/randnn_images.ipynb">this Jupyter notebook</a>.</p>
+      <h2 id="figures-created-with-grapher"><span class="header-section-number">8.2</span> Figures Created with Grapher</h2>
+      <p>The line graphs and 3d heightmap graphs were generated with Grapher. Those images were created with the Grapher files in <a href="https://github.com/tylerneylon/math/tree/master/randnn/grapher">this directory on GitHub</a>.</p>
+      <h2 id="figures-created-with-shadertoy"><span class="header-section-number">8.3</span> Figures Created with Shadertoy</h2>
       <p>Figure 1 is a screenshot of a WebGL-renderable random neural network with live-editable code <a href="https://www.shadertoy.com/view/MtdBz4">on Shadertoy</a>.</p>
-      <h2 id="figure-2"><span class="header-section-number">8.2</span> Figure 2</h2>
       <p>There are two versions of figure 2 because I don’t think all browsers correctly display the live-rendered version, which uses WebGL via Shadertoy. You can experiment with the live-rendered version in real-time <a href="https://www.shadertoy.com/view/XltBR4">at this Shadertoy page</a>. The animated gif uses different parameters that you can find <a href="https://www.shadertoy.com/view/lldBz4">at this other Shadertoy page</a>.</p>
-      <p>XXX</p>
-      <ul>
-      <li>Link to the notebook to generate the images.</li>
-      <li>How figure 2 was generated.</li>
-      </ul>
       <hr />
       <h1 id="references" class="unnumbered">References</h1>
       <div id="refs" class="references">
