--- a/randnn/template.html
+++ b/randnn/template.html
@@ -19,7 +19,10 @@
     <p style="display:none">\(\newcommand{\latexonlyrule}[2]{}\)</p>
     <div class="main">
       <div class="title">$title$</div>
-      <div class="author">$author$</div>
+      <div class="author">$author$ — <span style="font-size: 80%">(Got an ML
+          project? Email me:
+          <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>)
+          </div></span>
       <div class="date">$date$</div>
       $body$
     </div>
