--- a/randnn/randnn_local.html
+++ b/randnn/randnn_local.html
@@ -19,7 +19,10 @@
     <p style="display:none">\(\newcommand{\latexonlyrule}[2]{}\)</p>
     <div class="main">
       <div class="title">A Visual Exploration of Random Neural Networks</div>
-      <div class="author">Tyler Neylon</div>
+      <div class="author">Tyler Neylon — <span style="font-size: 80%">(Got an ML
+          project? Email me:
+          <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>)
+          </div></span>
       <div class="date">533.2018</div>
       <p>This is an illustrated tour of neural networks in their primordial, untrained state. Neural networks are notoriously difficult beasts to understand, and my aim is to provide both a peek into the inherent beauty of this world, as well as to help you build a bit of intuition to help you shape your initial model — specifically, by an informed choice of hyperparameters. I’ll assume you know that neural networks are tools for machine learning, and that you have a little bit of a coding and math background, but I’ll try to keep things friendly.</p>
       <p>A random neural network looks like this:</p>
