randnn: Add near-bottom blurb.

--- a/randnn/randnn.html
+++ b/randnn/randnn.html
@@ -195,6 +195,8 @@
       <p><span class="math display">\[\sigma = \frac{1}{\sqrt{n}},\]</span></p>
       <p>and we’ll arrive at <span class="math inline">\(E[\|y\|^2] = \|x\|^2,\)</span> which nicely matches our original goal (3). This is not the exact reasoning used to justify He or Glorot initialization, but it does provide a first look at how the weight scales affect the global behavior of the network as a whole.</p>
       <hr />
+      <p><em><strong>Heya!</strong> I hope you enjoyed my article. As you can see, I love machine learning. If you’d like to work together on a machine learning project, I’d love to hear from you. My company, Unbox Research, has a small team of talented ML engineers. We specialize in helping content platforms improve their data understanding and leverage, which translates to a lot of algorithmic text and image comprehension as well as driving user engagement through discovery or personalization. I’m <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>.</em></p>
+      <hr />
       <h1 id="notes-on-the-images"><span class="header-section-number">8</span> Notes on the Images</h1>
       <p>This section describes how to recreate all of the images in this post. If you like these images, I encourage you to render and play with them for yourself — they’re surprisingly delightful. As I experimented, I felt as if I was exploring a new world.</p>
       <h2 id="figures-created-with-python"><span class="header-section-number">8.1</span> Figures Created with Python</h2>
