randnn: Apply some edits from Dawn.

--- a/randnn/template.html
+++ b/randnn/template.html
@@ -19,8 +19,8 @@
     <p style="display:none">\(\newcommand{\latexonlyrule}[2]{}\)</p>
     <div class="main">
       <div class="title">$title$</div>
-      <div class="author">$author$ — <span style="font-size: 80%">(Got an ML
-          project? Email me:
+      <div class="author">$author$ — <span style="font-size: 80%">(Got a
+          machine learning project? Email me:
           <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>)
           </div></span>
       <div class="date">$date$</div>
